--- a/.env.example
+++ b/.env.example
@@ -14,12 +14,12 @@ DB_NAME=
 
 # Mongo
 
-MONGO_URL
+MONGO_URL=
 
 # Redis
 
-REDIS_HOST=127.0.0.1
-REDIS_PORT=6379
+REDIS_HOST=
+REDIS_PORT=
 
 # Mail
 
