--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/yup": "^0.26.24",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.2.2",
+    "cors": "^2.8.5",
     "date-fns": "^2.4.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
